TP-1721 Fix multiple SonarQube issues
Fixed e.g. too long lines, unused variables, unused assignments,
duplicate CSS selectors, and JS variables declared with var. Also used
constructor property promotion in some classes and fixed some typos.

--- a/public/themes/custom/palvelumanuaali/components/01-atoms/forms/_edit-forms.scss
+++ b/public/themes/custom/palvelumanuaali/components/01-atoms/forms/_edit-forms.scss
@@ -423,17 +423,15 @@ details>.form-wrapper:last-child {
   .draggable {
     .handle {
       width: 48px;
-      height: 48px;
+      height: 100%;
       padding: 0;
       background-position: center;
       margin-top: 0;
-      height: 100%;
     }
     .tabledrag-handle {
       overflow: visible;
-      height: 48px;
-      position: absolute;
       height: 100%;
+      position: absolute;
       display: block;
     }
     .field-multiple-drag {
